@@ -9,6 +9,8 @@ FreeRADIUS 3.0.26 Thu 07 Oct 2021 12:00:00 EDT urgency=low
 	  tested with wpa_supplicant and Windows 11.
 	* Add %{concat:foo[*] ;}, which concatenates a set
 	  of attributes, separated by a character.
+	* Fix for incompelete home server list after deleting a
+	  home server via radmin.
 
 	Bug fixes
 	* Ensure PBKDF2 always uses at least one iteration
